Add styling directives to li

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,13 +8,18 @@
       <ul class="list-group">
         <div *ngIf="onlyOdd" >
           <li
-            class="list-group-item" *ngFor="let oddNumber of oddNumbers">
+            class="list-group-item"
+            [ngClass] = "{odd: odd % 2 !== 0}"
+            [ngStyle] = "{backgroundColor: odd % 2 !== 0 ? 'yellow': 'transparent'}"
+            *ngFor="let oddNumber of oddNumbers">
             {{ oddNumber }}
           </li>
         </div>
         <div *ngIf="!onlyOdd">
           <li
-            class="list-group-item" *ngFor="let evenNumber of evenNumbers">
+            class="list-group-item" 
+            [ngClass] = "{odd: even % 2 !== 0}"
+            *ngFor="let evenNumber of evenNumbers">
             {{ evenNumber }}
           </li>
         </div>
